# KoopmanRL

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CITATION.cff  Claude-Plan.md  LICENSE.md  README.md  SCRATCH.md  pyproject.toml  sakc_linear_system_params.json  skvi_linear_system_params.json
.github/workflows/: deploy-docs.yml  lint.yml  test-deploy-docs.yml
cleanrl/: a2c.py  soft_actor_koopman_critic.py  soft_koopman_value_iteration.py
configurations/: AGENTS.md  sakc_double_well_hparams.json  sakc_fluid_flow_hparams.json  sakc_linear_system_hparams.json  sakc_lorenz_hparams.json  skvi_double_well_hparams.json  skvi_fluid_flow_hparams.json  skvi_linear_system_hparams.json  skvi_lorenz_hparams.json
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: installation.md  introduction.md  quickstart.md
docs/docs/algorithms/: _category_.json  lqr.md  sac.md  sakc.md  skvi.md
docs/docs/api/: _category_.json  index.md
docs/docs/developers/: _category_.json  contributing.md
docs/docs/environments/: _category_.json  double-well.md  fluid-flow.md  linear-system.md  lorenz.md
docs/docs/hyperparameter-optimization/: _category_.json  overview.md
docs/src/components/HomepageFeatures/: index.tsx
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
environments/: __init__.py  double_well.py  double_well_v0.py  fluid_flow.py  linear_system.py  lorenz.py  test_env.py
koopmanrl/: AGENTS.md  interpretability_discrete_value_iteration.py  koopman_observables.py  linear_quadratic_regulator.py  opt_wrappers.py  sac_continuous_action.py  sakc_optuna_opt.py  skvi_optuna_opt.py  soft_actor_koopman_critic.py  soft_koopman_value_iteration.py  utils.py  value_based_sac_continuous_action.py  value_function_continuous_action.py
koopmanrl/environments/: AGENTS.md  fluid_flow.py  test_env.py
koopmanrl/koopman_tensor/: AGENTS.md  generate_tensor.py  numpy_tensor.py  torch_tensor.py  utils.py
koopmanrl/koopman_tensor/observables/: AGENTS.md  numpy_observables.py  torch_observables.py
koopmanrl_utils/: AGENTS.md  interpret_koopman.py  plot_csv_from_tensorboards.py  process_episodic_returns.py  process_sakc_ablations.py  process_skvi_ablations.py  run_optimized_experiments.py  tsne_koopman_tensor.py
koopmanrl_utils/movies/: PIPELINE.md  __init__.py  abstract_policy.py  algo_policies.py  default_policies.py  env_enum.py  generate_gifs.py  generate_trajectories.py  generate_trajectory_figure.py  generator.py  hundred_episode_cost_average.py
koopmanrl_utils/movies/fluid_flow/: render_video.py
scripts/: avg_performance_from_tensorboard.py  dataframe_creator.py  interpret_koopman.json  interpret_koopman.py  plot_csv_from_tensorboards.py  read_tensorboard.py  run_optimized_experiments.py  run_optimized_experiments.sh  run_sakc_opt.py  run_sakc_opt.sh  run_skvi_opt.py  run_skvi_opt.sh  tsne_koopman_tensor.py  utils.py
scripts/movies/: AGENTS.md  default_policies.py  generate_csvs.ipynb  generate_gifs.py  generator.py  hundred_episode_cost_average.py  plotting_trajectories.ipynb
src/koopmanrl/: linear_quadratic_regulator.py  opt_wrappers.py  sac_continuous_action.py  sakc_optuna_opt.py  skvi_optuna_opt.py  soft_actor_koopman_critic.py  soft_koopman_value_iteration.py  utils.py  value_based_sac_continuous_action.py
src/koopmanrl/environments/: __init__.py  double_well.py  linear_system.py  lorenz.py
src/koopmanrl/koopman_tensor/: generate_tensor.py  utils.py
tests/: conftest.py  run_verification_tests.sh  test_hparam_opt.py  test_rl.py  utils.py
tuning/: opt_wrappers.py  run_sakc_opt.sh  run_skvi_opt.sh  sakc_optuna_opt.py  skvi_optuna_opt.py
tuning/best_configurations/: sakc_lorenz_hparams.json  skvi_double_well_hparams.json  skvi_fluid_flow_hparams.json  skvi_linear_system_hparams.json  skvi_lorenz_hparams.json
