[project]
name = "koopmanrl"
description = "KoopmanRL is a reinforcement learning (RL) package designed around the two Koopman-Assisted RL (KARL) algorithms, Soft Koopman Value Iteration, and Soft Koopman Actor-Critic. It provides the utilities to build upon parts of its algorithms by either using only the Koopman tensor itself, or only components of the two KARL algorithms. In addition it provides utilities for automatic hyperparameter tuning of KARL algorithms, as well as 4 environments rooted in the control literature. v.1.0.0 is the accompanying repository to 'KARL: Koopman-Assisted Reinforcement Learning'."
authors = [
  {name = "Ludger Paehler", email = "paehlerludger@gmail.com"},
  {name = "Preston Rozwood", email = "pwr36@cornell.edu"},
  {name = "Edward J. Mehrez", email = "ejm322@cornell.edu"},
]
requires-python = "==3.10.*"
version = "0.1.0"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]
repository = "https://github.com/dynamicslab/KoopmanRL"
keywords = [
    "Reinforcement Learning",
    "Koopman Operator",
    "Scientific Machine Learning",
    "Dynamical Systems",
]
dependencies = [
    "cleanrl>=1.2.0",
    "control>=0.10.2",
    "gym==0.23.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "optuna>=3.0.0",
    "ray[tune]>=2.53.0",
    "scipy>=1.15.3",
    "stable-baselines3==1.2.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "typed-argument-parser>=1.11.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.vulture]
ignore_names = ["LinearSystem", "FluidFlow", "Lorenz", "DoubleWell"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401", "E731"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.sdist]
include = [
    "koopmanrl",
    "koopmanrl_utils",
]

[tool.hatch.build.targets.wheel]
include = [
    "koopmanrl",
    "koopmanrl_utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
